Recieved estimates update, all recieved estimates are show now, calender alignments fix

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -25,6 +25,6 @@
 
 .fc-header-title {
   h2 {
-    font-size: 20px;
+    font-size: 15px;
   }
 }
